# data-gen

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-image.sh  start-dev-db.sh
src/: lib.rs  main.rs
src/db/: core.rs  mod.rs  models.rs  schema.rs
